--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="stlyegiphy.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -36,6 +36,6 @@
        crossorigin="anonymous"></script>
 
 <script src="script.js"></script>
-<script src="script2.js"></script>
+<script src="java.js"></script>
 </body>
 </html>
