--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                    aria-label="Recipient's username"
                    aria-describedby="button-addon2"> 
             <div class="input-group-append">
-                <button class="btn btn-outline" id="searchButton">Submitt</button>
+                <button class="btn btn-outline" id="searchButton">Submit</button>
             </div>
         </div>
     </form>
